--- a/process_fusions/aggregate_by_sample.ipynb
+++ b/process_fusions/aggregate_by_sample.ipynb
@@ -1224,6 +1224,7 @@
     "# and now ROS1\n",
     "ros1_cd74_cells = []\n",
     "ros1_ezr_cells = []\n",
+    "\n",
     "for cell in fusions_x_cell_trim.index:\n",
     "    curr_fus = fusions_x_cell_trim.loc[cell].fusions\n",
     "    \n",
@@ -1622,6 +1623,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# just using index slicing here\n",
     "for x in alk_eml4_cells:\n",
     "    meta_row = sample_cell_key[sample_cell_key.cell_id == x]\n",
     "    curr_sample = list(meta_row.sample_name)[0]\n",
@@ -2011,7 +2013,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_sample_df.to_csv('fusions_x_sample_breakdown_3.23.20.csv')"
+    "x_sample_df.to_csv('fusions_x_sample_breakdown_3.23.20.csv"
    ]
   }
  ],
